--- a/Task1/task1.ipynb
+++ b/Task1/task1.ipynb
@@ -847,6 +847,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The results of the Logistic Regression are as follows: \n",
+      "\n",
       "The training report is: \n",
       "               precision    recall  f1-score   support\n",
       "\n",
@@ -884,7 +886,7 @@
     "test_report = classification_report(y_test, y_pred)\n",
     "\n",
     "\n",
-    "\n",
+    "print('The results of the Logistic Regression are as follows:','\\n')\n",
     "print('The training report is:','\\n',train_report, '\\n')\n",
     "print('The test report is:', '\\n', test_report)\n"
    ]
@@ -997,17 +999,17 @@
      "text": [
       "Fitting 5 folds for each of 20 candidates, totalling 100 fits\n",
       "The best parameters are: \n",
-      " {'C': 10, 'penalty': 'l1'} \n",
+      " {'C': 10, 'penalty': 'l2'} \n",
       "\n",
-      "The report for the Logistic Regression is as follows: \n",
+      "The report for the  tuned Logistic Regression is as follows: \n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.85      0.79      0.82       141\n",
-      "           1       0.68      0.76      0.72        82\n",
+      "           0       0.85      0.80      0.82       141\n",
+      "           1       0.69      0.76      0.72        82\n",
       "\n",
       "    accuracy                           0.78       223\n",
-      "   macro avg       0.76      0.78      0.77       223\n",
-      "weighted avg       0.79      0.78      0.78       223\n",
+      "   macro avg       0.77      0.78      0.77       223\n",
+      "weighted avg       0.79      0.78      0.79       223\n",
       "\n"
      ]
     }
@@ -1029,7 +1031,7 @@
     "log_tuned = log_grid.best_estimator_\n",
     "y_log_tuned = log_tuned.predict(X_test)\n",
     "log_report = classification_report(y_test, y_log_tuned)\n",
-    "print('The report for the Logistic Regression is as follows:','\\n',log_report)\n"
+    "print('The report for the  tuned Logistic Regression is as follows:','\\n',log_report)\n"
    ]
   },
   {
@@ -1045,7 +1047,7 @@
       "The best parameters are: \n",
       " {'criterion': 'gini', 'max_depth': 5, 'max_features': None, 'min_samples_leaf': 5, 'min_samples_split': 2} \n",
       "\n",
-      "The report for the Decision tree with best estimators is as follows: \n",
+      "The report for the tuned Decision tree with best estimators is as follows: \n",
       "               precision    recall  f1-score   support\n",
       "\n",
       "           0       0.86      0.81      0.83       141\n",
@@ -1077,7 +1079,7 @@
     "dt_tuned = dt_grid.best_estimator_\n",
     "y_dt_tuned = dt_tuned.predict(X_test)\n",
     "dt_report = classification_report(y_test, y_dt_tuned)\n",
-    "print('The report for the Decision tree with best estimators is as follows:','\\n',dt_report)\n"
+    "print('The report for the tuned Decision tree with best estimators is as follows:','\\n',dt_report)\n"
    ]
   },
   {
@@ -1091,17 +1093,17 @@
      "text": [
       "Fitting 5 folds for each of 243 candidates, totalling 1215 fits\n",
       "The best parameters are: \n",
-      " {'max_depth': 10, 'max_features': 'log2', 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 200} \n",
+      " {'max_depth': 30, 'max_features': 'log2', 'min_samples_leaf': 1, 'min_samples_split': 5, 'n_estimators': 50} \n",
       "\n",
-      "The report for the Random Forest Classiffier with best estimators is as follows: \n",
+      "The report for the tuned Random Forest Classiffier with best estimators is as follows: \n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.83      0.85      0.84       141\n",
-      "           1       0.73      0.70      0.71        82\n",
+      "           0       0.83      0.87      0.85       141\n",
+      "           1       0.76      0.70      0.73        82\n",
       "\n",
-      "    accuracy                           0.79       223\n",
-      "   macro avg       0.78      0.77      0.78       223\n",
-      "weighted avg       0.79      0.79      0.79       223\n",
+      "    accuracy                           0.81       223\n",
+      "   macro avg       0.80      0.78      0.79       223\n",
+      "weighted avg       0.80      0.81      0.81       223\n",
       "\n"
      ]
     }
@@ -1125,7 +1127,84 @@
     "y_rfc_tuned = rfc_tuned.predict(X_test)\n",
     "#Create a classification report to view the metrics of the tuned model\n",
     "rfc_report = classification_report(y_test, y_rfc_tuned)\n",
-    "print('The report for the Random Forest Classiffier with best estimators is as follows:','\\n',rfc_report)"
+    "print('The report for the tuned Random Forest Classiffier with best estimators is as follows:','\\n',rfc_report)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here's an analysis of the results:\n",
+    "---\n",
+    "### **1. Logistic Regression**\n",
+    "**Training Report**:\n",
+    "- **Class 0** has better precision (0.82), recall (0.88), and f1-score (0.85) compared to **Class 1**, which has slightly lower recall (0.70) and f1-score (0.74).\n",
+    "- Overall training accuracy: **81%**.\n",
+    "- The model is well-balanced in performance, but there is some imbalance in handling the two classes.\n",
+    "\n",
+    "**Test Report**:\n",
+    "- Performance on the test set is slightly lower than the training set:\n",
+    "  - Class 0 performs better with precision (0.83) and recall (0.82).\n",
+    "  - Class 1 shows a drop in precision (0.69) and f1-score (0.71).\n",
+    "- Test accuracy: **78%**, indicating slight overfitting.\n",
+    "\n",
+    "\n",
+    "### **2. Decision Tree**\n",
+    "**Training Report**:\n",
+    "- The Decision Tree achieves **perfect metrics** (precision, recall, f1-score = 1.00) on the training set. This suggests overfitting.\n",
+    "\n",
+    "**Test Report**:\n",
+    "- Performance drops significantly on the test set:\n",
+    "  - Class 0: Precision (0.81), recall (0.75), and f1-score (0.78).\n",
+    "  - Class 1: Precision (0.62), recall (0.70), and f1-score (0.66).\n",
+    "- Test accuracy: **73%**.\n",
+    "- This drop indicates the model does not generalize well to unseen data due to overfitting.\n",
+    "\n",
+    "\n",
+    "### **3. Support Vector Machine (SVM)**\n",
+    "**Training Report**:\n",
+    "- SVM achieves perfect metrics (precision, recall, f1-score = 1.00) on the training set, indicating overfitting.\n",
+    "\n",
+    "**Test Report**:\n",
+    "- Test performance is better than the Decision Tree but slightly worse than Logistic Regression:\n",
+    "  - Class 0: Precision (0.83), recall (0.85), and f1-score (0.84).\n",
+    "  - Class 1: Precision (0.73), recall (0.70), and f1-score (0.71).\n",
+    "- Test accuracy: **79%**.\n",
+    "- SVM generalizes slightly better than Decision Tree but still shows signs of overfitting.\n",
+    "\n",
+    "\n",
+    "### **4. Tuned Logistic Regression**\n",
+    "- Hyperparameter tuning improves performance:\n",
+    "  - Best parameters: `C=10`, `penalty='l2'`.\n",
+    "  - Class 0 precision increases slightly (0.85), while Class 1 recall improves to 0.76, resulting in a balanced f1-score of **0.72** for Class 1.\n",
+    "  - Accuracy remains at **78%**, but macro and weighted averages show a slight improvement in balance between the two classes.\n",
+    "\n",
+    "\n",
+    "### **5. Tuned Decision Tree**\n",
+    "- Hyperparameter tuning significantly reduces overfitting:\n",
+    "  - Best parameters: `{criterion='gini', max_depth=5, min_samples_leaf=5}`.\n",
+    "  - Test accuracy improves to **79%**.\n",
+    "  - Both classes see better balance:\n",
+    "    - Class 0: Precision (0.86), recall (0.81), f1-score (0.83).\n",
+    "    - Class 1: Precision (0.70), recall (0.77), f1-score (0.73).\n",
+    "\n",
+    "\n",
+    "### **6. Tuned Random Forest Classifier**\n",
+    "- Hyperparameter tuning improves generalization:\n",
+    "  - Best parameters: `{max_depth=30, max_features='log2', n_estimators=50}`.\n",
+    "  - Test accuracy: **81%**, the highest among all models.\n",
+    "  - Class 0: Precision (0.83), recall (0.87), f1-score (0.85).\n",
+    "  - Class 1: Precision (0.76), recall (0.70), f1-score (0.73).\n",
+    "- The Random Forest provides a good trade-off between complexity and generalization.\n",
+    "\n",
+    "\n",
+    "### **Overall Observations**\n",
+    "1. **Logistic Regression (Tuned)** and **Random Forest (Tuned)** offer the best balance of accuracy and generalization. \n",
+    "2. The **Decision Tree** and **SVM** show overfitting on the training set, but tuning improves their generalization.\n",
+    "3. **Random Forest** is the best performer in terms of overall accuracy and stability on the test set.\n",
+    "4. **Model Selection** should depend on the task priorities:\n",
+    "   - If interpretability is crucial, go with Logistic Regression.\n",
+    "   - For higher performance, Random Forest is preferred."
    ]
   }
  ],
