--- a/Task3/task3.ipynb
+++ b/Task3/task3.ipynb
@@ -409,14 +409,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The training report is: \n",
+      "The training report for the Logistic Regresion is: \n",
       "               precision    recall  f1-score   support\n",
       "\n",
       "           0       1.00      1.00      1.00        34\n",
@@ -428,7 +428,7 @@
       "weighted avg       0.98      0.98      0.98       110\n",
       " \n",
       "\n",
-      "The test report is: \n",
+      "The test reportfor the Logistic Regression is: \n",
       "               precision    recall  f1-score   support\n",
       "\n",
       "           0       1.00      1.00      1.00        14\n",
@@ -566,14 +566,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The training report for SVM is: \n",
+      "The training report for Random Forest Classifier is: \n",
       "               precision    recall  f1-score   support\n",
       "\n",
       "           0       1.00      1.00      1.00        34\n",
@@ -585,7 +585,7 @@
       "weighted avg       1.00      1.00      1.00       110\n",
       " \n",
       "\n",
-      "The test report for SVM tree is: \n",
+      "The test report for the Random Forest Classifier is: \n",
       "               precision    recall  f1-score   support\n",
       "\n",
       "           0       1.00      1.00      1.00        14\n",
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
       "The best parameters are: \n",
       " {'C': 0.01, 'penalty': None} \n",
       "\n",
-      "The report for the Logistic Regression is as follows: \n",
+      "The report for the tuned Logistic Regression is as follows: \n",
       "               precision    recall  f1-score   support\n",
       "\n",
       "           0       1.00      0.93      0.96        14\n",
@@ -666,12 +666,12 @@
     "log_tuned = log_grid.best_estimator_\n",
     "y_log_tuned = log_tuned.predict(X_test)\n",
     "log_report = classification_report(y_test, y_log_tuned)\n",
-    "print('The report for the Logistic Regression is as follows:','\\n',log_report)\n"
+    "print('The report for the tuned Logistic Regression is as follows:','\\n',log_report)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +682,7 @@
       "The best parameters are: \n",
       " {'criterion': 'gini', 'max_depth': 3, 'max_features': 'sqrt', 'min_samples_leaf': 1, 'min_samples_split': 2} \n",
       "\n",
-      "The report for the Decision tree with best estimators is as follows: \n",
+      "The report for the tuned Decision tree with best estimators is as follows: \n",
       "               precision    recall  f1-score   support\n",
       "\n",
       "           0       1.00      1.00      1.00        14\n",
@@ -715,12 +715,12 @@
     "dt_tuned = dt_grid.best_estimator_\n",
     "y_dt_tuned = dt_tuned.predict(X_test)\n",
     "dt_report = classification_report(y_test, y_dt_tuned)\n",
-    "print('The report for the Decision tree with best estimators is as follows:','\\n',dt_report)\n"
+    "print('The report for the tuned Decision tree with best estimators is as follows:','\\n',dt_report)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -729,9 +729,9 @@
      "text": [
       "Fitting 5 folds for each of 243 candidates, totalling 1215 fits\n",
       "The best parameters are: \n",
-      " {'max_depth': 20, 'max_features': 'sqrt', 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 50} \n",
+      " {'max_depth': 10, 'max_features': 'sqrt', 'min_samples_leaf': 2, 'min_samples_split': 5, 'n_estimators': 50} \n",
       "\n",
-      "The report for the Random Forest Classiffier with best estimators is as follows: \n",
+      "The report for the tuned Random Forest Classiffier with best estimators is as follows: \n",
       "               precision    recall  f1-score   support\n",
       "\n",
       "           0       1.00      1.00      1.00        14\n",
@@ -764,12 +764,12 @@
     "y_rfc_tuned = rfc_tuned.predict(X_test)\n",
     "#Create a classification report to view the metrics of the tuned model\n",
     "rfc_report = classification_report(y_test, y_rfc_tuned)\n",
-    "print('The report for the Random Forest Classiffier with best estimators is as follows:','\\n',rfc_report)"
+    "print('The report for the tuned Random Forest Classiffier with best estimators is as follows:','\\n',rfc_report)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +780,7 @@
       "The best parameters are: \n",
       " {'C': 1, 'coef0': 1, 'degree': 2, 'gamma': 'scale', 'kernel': 'poly'} \n",
       "\n",
-      "The report for the Decision tree with best estimators is as follows: \n",
+      "The report for the tuned SVM with best estimators is as follows: \n",
       "               precision    recall  f1-score   support\n",
       "\n",
       "           0       1.00      1.00      1.00        14\n",
@@ -812,24 +812,99 @@
     "svm_tuned = svm_grid.best_estimator_\n",
     "y_svm_tuned = svm_tuned.predict(X_test)\n",
     "svm_report = classification_report(y_test, y_svm_tuned)\n",
-    "print('The report for the Decision tree with best estimators is as follows:','\\n',svm_report)\n"
+    "print('The report for the tuned SVM with best estimators is as follows:','\\n',svm_report)\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#note vchanges"
+    "### 1. **Logistic Regression**\n",
+    "- **Training Report**: Excellent results with high precision, recall, and F1-scores for all classes. Accuracy is 98%, indicating good fit on the training data.\n",
+    "- **Test Report**: Maintains high accuracy (97%) with some slight drops in recall and F1 for class `1`. Precision and recall for other classes remain strong.\n",
+    "\n",
+    "**Insights**:\n",
+    "- The model generalizes well, showing consistent performance across training and testing sets.\n",
+    "- Slight overfitting is possible, as training performance is higher than testing.\n",
+    "\n",
+    "\n",
+    "### 2. **Decision Tree**\n",
+    "- **Training Report**: Perfect scores (100% across all metrics), indicative of overfitting.\n",
+    "- **Test Report**: Accuracy drops to 92%, with class `1` showing reduced precision and recall (precision: 0.82, recall: 0.90).\n",
+    "\n",
+    "**Insights**:\n",
+    "- The Decision Tree is likely overfitting due to its ability to memorize training data. This is evident from the drop in performance on unseen data.\n",
+    "- Hyperparameter tuning is necessary to reduce overfitting.\n",
+    "\n",
+    "\n",
+    "### 3. **Support Vector Machine (SVM)**\n",
+    "- **Training Report**: Similar to Logistic Regression, high accuracy (98%) with strong metrics for all classes.\n",
+    "- **Test Report**: Accuracy is slightly lower at 95%, with balanced performance across all classes.\n",
+    "\n",
+    "**Insights**:\n",
+    "- SVM shows a good balance between training and testing performance, suggesting it is not overfitting.\n",
+    "- Consistent metrics across classes indicate the model is reliable.\n",
+    "\n",
+    "\n",
+    "### 4. **Random Forest Classifier**\n",
+    "- **Training Report**: Perfect scores, indicating overfitting.\n",
+    "- **Test Report**: Accuracy is 95%, with slight dips in precision and recall for class `1` (precision: 0.90, recall: 0.90).\n",
+    "\n",
+    "**Insights**:\n",
+    "- Like the Decision Tree, Random Forest overfits on the training data but still performs well on the test set.\n",
+    "- Hyperparameter tuning is crucial to improve generalization.\n",
+    "\n",
+    "\n",
+    "### 5. **Tuned Logistic Regression**\n",
+    "- **Best Parameters**: `{ 'C': 0.01, 'penalty': None }`\n",
+    "- **Report**: Accuracy drops to 92%, with reduced performance in class `1` (precision: 0.82, recall: 0.90).\n",
+    "\n",
+    "**Insights**:\n",
+    "- Regularization (`C=0.01`) helps reduce overfitting but slightly impacts performance.\n",
+    "- The trade-off between bias and variance is evident, with more balanced metrics but slightly lower accuracy.\n",
+    "\n",
+    "\n",
+    "### 6. **Tuned Decision Tree**\n",
+    "- **Best Parameters**: `{ 'criterion': 'gini', 'max_depth': 3, 'max_features': 'sqrt', 'min_samples_leaf': 1, 'min_samples_split': 2 }`\n",
+    "- **Report**: Accuracy improves to 95%, with significant gains in generalization compared to the untuned version.\n",
+    "\n",
+    "**Insights**:\n",
+    "- Limiting tree depth and optimizing split criteria mitigates overfitting.\n",
+    "- The model now generalizes better, with balanced metrics across all classes.\n",
+    "\n",
+    "\n",
+    "### 7. **Tuned Random Forest**\n",
+    "- **Best Parameters**: `{ 'max_depth': 10, 'max_features': 'sqrt', 'min_samples_leaf': 2, 'min_samples_split': 5, 'n_estimators': 50 }`\n",
+    "- **Report**: Accuracy remains 95%, with improved balance across classes.\n",
+    "\n",
+    "**Insights**:\n",
+    "- Hyperparameter tuning reduces overfitting and maintains high performance.\n",
+    "- The model shows strong generalization and stability.\n",
+    "\n",
+    "\n",
+    "### 8. **Tuned SVM**\n",
+    "- **Best Parameters**: `{ 'C': 1, 'coef0': 1, 'degree': 2, 'gamma': 'scale', 'kernel': 'poly' }`\n",
+    "- **Report**: Accuracy remains 97%, with slightly better precision and recall for all classes.\n",
+    "\n",
+    "**Insights**:\n",
+    "- The tuned SVM exhibits excellent generalization and performance consistency.\n",
+    "- The polynomial kernel captures complex patterns in the data effectively.\n",
+    "\n",
+    "\n",
+    "### Overall Observations:\n",
+    "1. **Untuned Models**:\n",
+    "   - Logistic Regression and SVM show strong generalization and balanced performance.\n",
+    "   - Decision Tree and Random Forest suffer from overfitting due to their flexibility in memorizing training data.\n",
+    "\n",
+    "2. **Tuned Models**:\n",
+    "   - Tuning improves the generalization of Decision Tree and Random Forest significantly.\n",
+    "   - Logistic Regression and SVM maintain high performance with minor improvements.\n",
+    "\n",
+    "3. **Model Recommendations**:\n",
+    "   - **SVM**: Best overall performance with minimal overfitting (97% accuracy on test set).\n",
+    "   - **Tuned Random Forest**: Reliable performance and good balance (95% accuracy).\n",
+    "   - Avoid untuned Decision Tree or Random Forest for deployment due to overfitting risks."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
