--- a/Task2/task2.ipynb
+++ b/Task2/task2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "[15509 rows x 10 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +562,7 @@
        "9        Augustine            Fathima Babu             Byon           6960  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +800,7 @@
        "9        Augustine            Fathima Babu             Byon           6960  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1052,7 @@
        "[24950 rows x 11 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +1084,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1104,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1145,28 +1145,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_25396\\2205836067.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_8572\\2205836067.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  imdb['Duration(Min)'].fillna(imdb['Duration(Min)'].median(), inplace=True)\n",
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_25396\\2205836067.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_8572\\2205836067.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  imdb['Votes'].fillna(imdb['Votes'].median(), inplace=True)\n",
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_25396\\2205836067.py:4: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_8572\\2205836067.py:4: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1204,7 +1204,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1214,8 +1214,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MODELLING AND MODEL EVALUATION\n",
+    "#### MODELLING\n",
+    "Here we are going to look at several models which include\n",
+    "- Linear Regression\n",
+    "- Ridge Regression\n",
+    "- Lasso Regression\n",
+    "- Random Forest Regression\n",
+    "\n",
+    "#### MODEL EVALUATION\n",
+    "After creating the models look at the metrics to find a criteria we can use to measure success\n",
+    "Some of the metrics we will look at include:\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1238,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1254,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1382,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1390,13 +1407,13 @@
      "output_type": "stream",
      "text": [
       "The metrics of the Random Forest Regression as follows\n",
-      "The r2 score is: \t 0.8971405742529021 \n",
+      "The r2 score is: \t 0.8971518376957663 \n",
       "\n",
-      "The Mean Squared Error is: \t 0.14208953836102292 \n",
+      "The Mean Squared Error is: \t 0.14207397909277572 \n",
       "\n",
-      "The RMSE is: \t 0.37694765997552354 \n",
+      "The RMSE is: \t 0.37692702091091285 \n",
       "\n",
-      "The Mean Absolute Error is: \t 0.19651129363449693 \n",
+      "The Mean Absolute Error is: \t 0.19614000373343293 \n",
       "\n"
      ]
     }
@@ -1422,10 +1439,67 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Summary of the Model Performance:\n",
+    "\n",
+    "Here are the results for each regression model:\n",
+    "\n",
+    "#### 1. **Linear Regression:**\n",
+    "   - **R² Score:** 0.71\n",
+    "   - **Mean Squared Error (MSE):** 0.398\n",
+    "   - **Root Mean Squared Error (RMSE):** 0.631\n",
+    "   - **Mean Absolute Error (MAE):** 0.449\n",
+    "\n",
+    "#### 2. **Ridge Regression:**\n",
+    "   - **R² Score:** 0.71\n",
+    "   - **Mean Squared Error (MSE):** 0.398\n",
+    "   - **Root Mean Squared Error (RMSE):** 0.631\n",
+    "   - **Mean Absolute Error (MAE):** 0.449\n",
+    "\n",
+    "#### 3. **Lasso Regression:**\n",
+    "   - **R² Score:** -9.93e-07 (close to 0)\n",
+    "   - **Mean Squared Error (MSE):** 1.381\n",
+    "   - **Root Mean Squared Error (RMSE):** 1.175\n",
+    "   - **Mean Absolute Error (MAE):** 0.850\n",
+    "\n",
+    "#### 4. **Random Forest Regression:**\n",
+    "   - **R² Score:** 0.90\n",
+    "   - **Mean Squared Error (MSE):** 0.142\n",
+    "   - **Root Mean Squared Error (RMSE):** 0.377\n",
+    "   - **Mean Absolute Error (MAE):** 0.197\n",
+    "\n",
+    "### **Interpretation of Results:**\n",
+    "\n",
+    "#### 1. **Linear and Ridge Regression:**\n",
+    "   - Both Linear and Ridge regression performed similarly, with an **R² score of 0.71**. This suggests that approximately **71%** of the variance in the target (rating score) can be explained by the models.\n",
+    "   - The **MSE, RMSE, and MAE** values for both models are nearly identical, indicating that they have similar performance in terms of prediction accuracy.\n",
+    "   - The **RMSE** values of **0.631** are reasonable but not particularly low, meaning the models have some prediction error.\n",
+    "\n",
+    "#### 2. **Lasso Regression:**\n",
+    "   - **Lasso Regression** performed poorly in comparison to the others. It has an **R² score close to zero (-9.93e-07)**, indicating that it barely explains any of the variance in the target variable.\n",
+    "   - The **MSE** and **RMSE** are significantly higher than the other models, with a **RMSE of 1.175**, which suggests substantial prediction error.\n",
+    "   - The **MAE** value is also much higher (**0.850**), indicating that Lasso’s predictions are less accurate than those of the other models.\n",
+    "\n",
+    "#### 3. **Random Forest Regression:**\n",
+    "   - **Random Forest Regression** achieved the **best performance** with an **R² score of 0.90**, meaning it explains about **90%** of the variance in the rating scores. This is significantly higher than the other models.\n",
+    "   - The **MSE** and **RMSE** values for Random Forest are much lower (0.142 and 0.377, respectively), indicating better accuracy in predictions.\n",
+    "   - The **MAE** value is also the lowest (**0.197**), meaning the model has the smallest average prediction error.\n",
+    "\n",
+    "### **Conclusion:**\n",
+    "\n",
+    "Based on the evaluation metrics, **Random Forest Regression** is the best-suited model for predicting the movie rating score. It provides the highest **R² score** (0.90), which indicates that it explains the most variance in the target variable. Additionally, it has the lowest **MSE, RMSE,** and **MAE**, suggesting that it provides the most accurate and reliable predictions.\n",
+    "\n",
+    "- **Linear and Ridge Regression** also performed well with a good **R² score of 0.71**, but **Random Forest** outperforms them in terms of error metrics.\n",
+    "- **Lasso Regression** should be avoided for this task, as it performed significantly worse than all other models.\n",
+    "\n",
+    "Thus, if you are looking for the best performance and most accurate predictions for the movie ratings, **Random Forest Regression** is the model to use."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
